// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UninstallModal component should be rendered correctly if app not uninstallable 1`] = `
<div
  className="sto-modal--uninstall"
>
  <Unknown
    secondaryAction={[Function]}
    title="Uninstall this application"
  >
    <ModalContent>
      <div
        className="sto-modal-content"
      >
        <ReactMarkdownWrapper
          source="This application is a major part of the Cozy platform. In order to keep you a __minimum user experience quality__, it's not possible to uninstall it through the Store application."
        />
        <div
          className="sto-modal-controls"
        >
          <button
            className="c-btn c-btn--secondary"
            onClick={[Function]}
            role="button"
          >
            Cancel
          </button>
          <button
            className="c-btn c-btn--danger c-btn--delete"
            disabled={true}
            onClick={[Function]}
            role="button"
          >
            Uninstall
          </button>
        </div>
      </div>
    </ModalContent>
  </Unknown>
</div>
`;

exports[`UninstallModal component should be rendered correctly if app uninstallable 1`] = `
<div
  className="sto-modal--uninstall"
>
  <Unknown
    secondaryAction={[Function]}
    title="Uninstall this application"
  >
    <ModalContent>
      <div
        className="sto-modal-content"
      >
        <ReactMarkdownWrapper
          source="This application is bound to be removed from your Cozy cozytest.mock.cc. Are you sure to __remove this application definitively__?"
        />
        <div
          className="sto-modal-controls"
        >
          <button
            className="c-btn c-btn--secondary"
            onClick={[Function]}
            role="button"
          >
            Cancel
          </button>
          <button
            className="c-btn c-btn--danger c-btn--delete"
            disabled={false}
            onClick={[Function]}
            role="button"
          >
            Uninstall
          </button>
        </div>
      </div>
    </ModalContent>
  </Unknown>
</div>
`;

exports[`UninstallModal component should hanlde correctly error from props 1`] = `
<div
  className="sto-modal--uninstall"
>
  <Unknown
    secondaryAction={[Function]}
    title="Uninstall this application"
  >
    <ModalContent>
      <div
        className="sto-modal-content"
      >
        <ReactMarkdownWrapper
          source="This application is bound to be removed from your Cozy cozytest.mock.cc. Are you sure to __remove this application definitively__?"
        />
        <p
          class="u-error"
        >
          Something went wrong when uninstalling this application. Reason: This is a test error
        </p>
        <div
          className="sto-modal-controls"
        >
          <button
            className="c-btn c-btn--secondary"
            onClick={[Function]}
            role="button"
          >
            Cancel
          </button>
          <button
            className="c-btn c-btn--danger c-btn--delete"
            disabled={false}
            onClick={[Function]}
            role="button"
          >
            Uninstall
          </button>
        </div>
      </div>
    </ModalContent>
  </Unknown>
</div>
`;
